[gd_scene load_steps=5 format=2]

[ext_resource path="res://lib/catalogue_label.gd" type="Script" id=1]
[ext_resource path="res://chemistry/chemical.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.501961, 0.501961, 0.501961, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )

[node name="Control" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="VBC" type="HBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0
mouse_filter = 2

[node name="CenterContainer" type="MarginContainer" parent="VBC"]
margin_right = 969.0
margin_bottom = 586.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="pb" type="ProgressBar" parent="VBC/CenterContainer"]
margin_right = 969.0
margin_bottom = 586.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
max_value = 1.0
value = 0.25
percent_visible = false

[node name="CatalogueLabel" type="Label" parent="VBC/CenterContainer"]
margin_right = 969.0
margin_bottom = 586.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "Bloop"
align = 1
valign = 1
script = ExtResource( 1 )
tag = "chemical_names"

[node name="override" type="OptionButton" parent="VBC"]
margin_left = 973.0
margin_right = 1010.0
margin_bottom = 586.0
text = "~"
items = [ "~", null, false, 0, null, "0", null, false, 1, null, "1", null, false, 2, null ]
selected = 0

[connection signal="item_selected" from="VBC/override" to="." method="_on_override_item_selected"]
